--- a/style.css
+++ b/style.css
@@ -23,3 +23,8 @@ h2 {
     margin: 2px 2px;
     cursor: pointer;
 }
+.form {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
