--- a/style.css
+++ b/style.css
@@ -1,30 +1,32 @@
 body {
-    background-color:#2A7E50;
+    background-color:#132a13;
     font-family:'Times New Roman', Times, serif;
-    color:#ffffff;
+    color: #fefae0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center
 }
-h1 {
-    text-align:center;
-    font-family: 'Courier New', Courier, monospace;
-}
-h2 {
-    text-align:center;
-    font-family: 'Courier New', Courier, monospace;
-}
+
 .button {
-    background-color: rgb(10, 57, 46);
-    border: none;
-    color:white;
+    background-color: #111d13;
+    color: #fefae0;
     padding: 15px 30px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
     font-size: 15px;
     margin: 2px 2px;
     cursor: pointer;
+    border-radius: 10px;
 }
-.form {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+
+#hero, #ngg, #rpsg, #rpgg, #ackn {
+    border: 4px solid #fefae0;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+a {
+    color:#fefae0;
 }
