--- a/rpgStyle.css
+++ b/rpgStyle.css
@@ -2,15 +2,17 @@ body {
   background-color: #111d13;
 }
 
-#text {
+#text, #text2 {
   background-color: #111d13;
   color: #fefae0;
+  margin-bottom: 10px;
   padding: 10px;
+  height: 200px;
 }
 
 #game {
-  max-width: 500px;
-  max-height: 400px;
+  width: 1000px;
+  height: 600px;
   background-color: #fefae0;
   color: #fefae0;
   margin: 30px auto 0px;
